<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    android:id="@+id/search_container">

    <LinearLayout
        android:padding="@dimen/spacing_m"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleSearchCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_title"
            android:textSize="@dimen/text_display"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/spacing_xl"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_m"
            android:hint="@string/search_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textCapWords|text"
                android:autofillHints="postalAddress locality"
                android:textColorHint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearch"
            android:text="@string/search_btn"
            app:backgroundTint="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_s"/>

        <LinearLayout
            android:id="@+id/resultContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_m">

            <TextView
                android:id="@+id/tvCityResult"
                android:textSize="@dimen/text_xl"
                tools:text="Roma"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvDescResult"
                tools:text="Sole"
                android:textSize="@dimen/text_l"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_s"/>

            <TextView
                android:id="@+id/tvTempResult"
                tools:text="35°C"
                android:textSize="@dimen/text_xl"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddFavorite"
                android:text="@string/add_fav_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/blue"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDetails"
                android:text="@string/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                app:backgroundTint="@color/blue"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>